<resources>
    <string name="activity_credits_title">Credits</string>
    <string name="activity_main_title">Performance Monitor AAOBD</string>
    <string name="activity_settings_title">Performance Monitor AAOBD</string>
    <string name="activity_stopwatch_title">Stopwatch</string>
    <string name="app_car_service_name">Performance Monitor AAOBD</string>
    <string name="app_name">Performance Monitor AAOBD</string>
    <string name="credits_author">Based on the app made by:</string>
    <string name="credits_basedon">Based on the SDK and demo App by:</string>
    <string name="credits_drivesafely">Drive Safely.</string>
    <string name="credits_thanks">Special thanks to:</string>
    <string name="element_VIN">VIN</string>
    <string name="element_batteryVoltage">Battery voltage</string>
    <string name="element_brakePressure">Brake Pressure</string>
    <string name="element_coolantTemperature">Coolant temperature</string>
    <string name="element_gearboxOilTemperature">Gearbox</string>
    <string name="element_lateralAcceleration">Lateral G\'s</string>
    <string name="element_longitudinalAcceleration">Longitudinal G\'s</string>
    <string name="element_navAltitude">Altitude</string>
    <string name="element_navHeading">Heading</string>
    <string name="element_none">None</string>
    <string name="element_odometer">Odometer</string>
    <string name="element_oilTemperature">Oil temperature</string>
    <string name="element_outsideTemperature">Outside temperature</string>
    <string name="element_soundVolume">Sound volume</string>
    <string name="element_wheelAngle">Wheel angle</string>
    <string name="element_wheel">Wheel</string>
    <string name="element_world">World</string>
    <string name="element_yawRate">Yaw rate</string>
    <string name="element_cac">Charger Air cooler</string>
    <string name="element_distance">Distance</string>
    <string name="element_ecoaverage">Eco Average</string>
    <string name="element_eco">Eco</string>
    <string name="exhaust">Exhaust</string>
    <string name="element_fuel_primary">Fuel Primary</string>
    <string name="element_fuel_secondary">Fuel Secondary</string>
    <string name="element_measurement">Measurement</string>
    <string name="element_motherboard">Motherboard</string>
    <string name="element_obd2">OBD2</string>
    <string name="element_pedal">Pedal</string>
    <string name="element_radio">Radio</string>
    <string name="element_wrench">Wrench</string>
    <string name="element_tire">Tire</string>
    <string name="font_audi" translatable="false">Audi Virtual Cockpit</string>
    <string name="font_frutiger" translatable="false">Frutiger</string>
    <string name="font_larabie" translatable="false">Larabie</string>
    <string name="font_seat" translatable="false">Seat Metastyle</string>
    <string name="font_segments" translatable="false">7 segment display</string>
    <string name="font_skoda" translatable="false">Skoda</string>
    <string name="font_vw" translatable="false">Volkswagen CarUI</string>
    <string name="font_vw2" translatable="false">Volkswagen Thesis</string>
    <string name="font_vw3" translatable="false">VW Digit</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_centerclock">Center gauges</string>
    <string name="pref_font">Font</string>
    <string name="pref_highlow">Show min/max values</string>
    <string name="pref_highlowmarks">Mark highest values on the gauge</string>
    <string name="pref_highvis">High visibility dial</string>
    <string name="pref_highvis_off">Display a needle on the gauge</string>
    <string name="pref_highvis_on">Display a highly visible ray instead of a needle</string>
    <string name="pref_leftclock">Left gauge</string>
    <string name="pref_rightclock">Right gauge</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_ticks">Tick values</string>
    <string name="pref_ticks_off">Don\'t display value of ticks</string>
    <string name="pref_ticks_on">Display value of ticks</string>
    <string name="element_obd_fuelpressure">Fuel pressure</string>
    <string name="element_obd_engineload">Engine load</string>
    <string name="element_obd_timing_advance">Timing advance</string>
    <string name="element_obd_throttle_position">Throttle position (Manifold)</string>
    <string name="element_obd_turboboost">Turbo boost pressure</string>
    <string name="element_obd_phonebatterylevel">Phone battery level</string>
    <string name="element_obd_phonebarometer">Phone barometer</string>
    <string name="element_obd_intakemanifoldpressure">Intake manifold</string>
    <string name="element_obd_catalysttemperature">Catalyst</string>
    <string name="element_obd_fuellevel">Fuel level</string>
    <string name="element_barometer">Barometer</string>
    <string name="bg_vw">Discover Pro Sport</string>
    <string name="bg_vw2">Carbon fiber</string>
    <string name="bg_vw3">Spotlight</string>
    <string name="bg_vwplaid">GTI Tartan</string>
    <string name="bg_gte">GTE Tartan</string>
    <string name="bg_vwgtd">GTD Tartan</string>
    <string name="bg_black">Black</string>
    <string name="bg_cloth">Cloth</string>
    <string name="bg_rock">Rock</string>
    <string name="bg_outrun">Outrun</string>
    <string name="bg_plain">Plain</string>
    <string name="bg_seat">Lines</string>
    <string name="bg_seat2">Dark grid</string>
    <string name="bg_skoda">Columbus</string>
    <string name="bg_skoda2">Columbus Sport</string>
    <string name="bg_skodaone">OneApp</string>
    <string name="bg_blackboard">Blackboard</string>
    <string name="bg_test">Test</string>
    <string name="bg_bolt">Bolt</string>
    <string name="bg_beetle">Herbie</string>
    <string name="pref_background">Background</string>
    <string name="font_ford" translatable="false">United Sans</string>
    <string name="bg_dots">Dots</string>
    <string name="bg_aa">Android Auto</string>
    <string name="item_details_go_back">Go Back</string>
    <string name="pid">PID</string>
    <string name="pidLabel">Label</string>
    <string name="pidShowLabel">Show Label</string>
    <string name="icon">Icon</string>
    <string name="obd_waiting">Loading PID list…</string>
    <string name="min_value">Minimum value</string>
    <string name="max_value">Maximum value</string>
    <string name="num_screens">Number of dashboards to display</string>
    <string name="unit">Unit</string>
    <string name="dashboards">Dashboards</string>
    <string name="rotary_input">Rotary input</string>
    <string name="rotary_desc">Disable buttons and use rotary dial if equipped</string>
    <string name="enable_script">Run unit conversion</string>
    <string name="enable_script_desc">Run formula on output</string>
    <string name="custom_script">Unit conversion</string>
    <string name="custom_script_desc">Run an EvalEx expression. Use a to represent the current value</string>
    <string name="formulas">Formulas</string>
    <string name="custom_expression">Custom expression</string>
    <string name="status_connecting_obd">Connecting to the OBD adapter…</string>
    <string name="status_connecting_to_ecu">Connecting to ECU…</string>
    <string name="credits_modifications">Developed by:</string>
    <string name="export_dashboards">Export dashboards</string>
    <string name="import_dashboards">Import dashboards</string>
    <string name="file_exported_successfully">File exported successfully</string>
    <string name="export_failed">Export failed</string>
    <string name="file_not_available">Export file is not available</string>
    <string name="whole_numbers">Whole numbers</string>
    <string name="whole_numbers_desc">Display without decimal places</string>
    <string name="gauge_settings">Gauge Settings</string>
    <string name="show_label_desc">In most cases you want to show an icon, but you can show a label if you cannot find an icon to match the PID.</string>
    <string name="show_label_desc_clock">Show label above the gauge</string>
    <string name="icon_null_desc">Select an icon to represent the metric</string>
    <string name="pref_shrink_gauge">Large center gauge</string>
    <string name="pref_shrink_gauge_off">Equal size gauges</string>
    <string name="pref_shrink_gauge_on">Emphasise center gauge</string>
    <string name="expressionDocumentation">View Documentation</string>
    <string name="copy_logs">Copy logs to clipboard</string>
    <string name="convert_f_to_c">Fahrenheit to Celsius</string>
    <string name="convert_c_to_f">Celsius to Fahrenheit</string>
    <string name="convert_bar_psi">Convert BAR to PSI</string>
    <string name="convert_psi_bar">Convert PSI to BAR</string>
    <string name="convert_km_to_miles">Kilometers to Miles</string>
    <string name="boolean_logic">Boolean Logic</string>
    <string name="convert_newton_ft_lb">Newton Meters to Foot-pounds</string>
    <string name="convert_cc_min_gal_hour">CC per minute to Gallon Hour</string>
    <string name="convert_liter_100_km">Liter 100/km to Miles per Gallon</string>
    <string name="convert_kpa_psi">Kilopascals (kPa) to (PSI)</string>
    <string name="status_setup_gauges">Setup gauges in settings</string>
    <string name="element_cylinder">Engine Cylinder</string>
    <string name="element_horsepower">Horsepower</string>
    <string name="element_transmission">Transmission</string>
    <string name="icon_credits">Icon Credits</string>
    <string name="action_preview">Preview</string>
    <string name="pref_view">View %1$d</string>
    <string name="pref_data_element_settings">Data element settings %1$d</string>
    <string name="pref_title_performance">Title %1$d</string>
    <string name="convert_minutes_seconds">Seconds to Minutes:Seconds</string>
    <string name="pref_chart_title">Chart line color</string>
    <string name="pref_chart_summary">Color to be used to draw lines on the chart</string>
    <string name="font_ev" translatable="false">Electro Vehicle</string>
    <string name="bg_ev">Electro Vehicle</string>
    <string name="minmax_below">Min/Max below gauge</string>
    <string name="minmax_below_desc">Place min/max values below gauge instead of overlapping the bottom of the gauge</string>
    <string name="media">Media</string>
    <string name="media_background_title">Media background</string>
    <string name="media_background_summary">Use album art as background (beta)</string>
    <string name="opacity_title">Gauge opacity</string>
    <string name="opacity_summary">Dim gauges to show more of background</string>
    <string name="credits_original_app">aa-torque by Kyle Agronick (GPLv3)</string>
    <string name="obd_section_status">Status</string>
    <string name="obd_section_devices">Adapters found</string>
    <string name="obd_section_diagnostics">Diagnostics</string>
    <string name="obd_section_log">Log</string>
    <string name="obd_search">Search</string>
    <string name="obd_reconnect">Reconnect</string>
    <string name="obd_forget">Forget</string>
    <string name="obd_test">Run test (voltage, protocol, RPM, speed, coolant)</string>
    <string name="obd_command_hint">ELM327 command (ATRV, 010C…)</string>
    <string name="obd_send">Send</string>
    <string name="obd_copy_log">Copy</string>
    <string name="obd_pairing_tip">Plug the adapter in and switch the ignition on. OBDLink CX: pairing is only possible during the first 5 minutes after plugging it in. Bluetooth adapters (ELM327, OBDLink MX+/LX, vLinker MC+): the PIN is usually 1234 or 0000.</string>
    <string name="obd_no_device_found">No adapter found. Check that it is plugged in and that Bluetooth is on, or enable \"Show all Bluetooth devices\".</string>
    <string name="project_url" translatable="false">https://github.com/Le-F-Sur-GitH/Performance-Monitor-AAOBD</string>
    <string name="credits_developer" translatable="false">Le F</string>
    <string name="obd_show_all">Show all Bluetooth devices</string>
</resources>